# Ark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ark.c
src/: ark.c  ark.h
src/commands/: help.c  help.h
src/helpers/: args.c  args.h  error.c  error.h  utils.c  utils.h
